# BSCompiler

./: .gitmodules  README.md
.github/workflows/: CI.yml
BSCompiler/Source/: basic-pass.cpp
Projects/CMake/: CMakeLists.txt
Projects/CMake/BSCompiler/: CMakeLists.txt
Projects/CMake/llvm/: CMakeLists.txt
